data/all_generated_tests/raw_wast_tests/block_InvalidorInconsistentControlFlowGraph_2376.wast
;; 7. **Test Blocks with Incorrectly Managed Operand Stack**:    - Create a block that improperly consumes and produces operands on the stack against its type signature.    - **Reasoning**: Tests if the CFG generation accurately reflects operand stack changes and type mismatches within a block context.    - **Purpose**: Checks for operand stack consistency within the CFG.

(assert_invalid
  (module (func $block-operand-stack-mismatch (result i32)
    (block (result i32)
      (i32.const 42)
      (block (result f64)
        (i32.const 10) ;; incorrectly managed operand stack, as the expected f64 is missing
      )
      (i32.add) ;; operand stack does not match
    )
  ))
  "type mismatch"
)